# grodecoder

./: .gitignore  Makefile  README.md  foo  pyproject.toml  v2.py
.github/workflows/: python-ci.yml
grodecoder/: __init__.py  _typing.py  cli.py  databases.py  identifier.py  models.py  toputils.py
grodecoder/data/databases/: charmm_csml_database.json  lipids.json  mad_database.json  residues.json
grodecoder/databases/: __init__.py  api.py  csml.py  mad.py  models.py
scripts/: build_lipid_database.py  create_charmm_database.py  create_mad_database.py  migrate_regression_dataset.py  streamlit_app.py  test-decode-batch.py
src/grodecoder/: __init__.py  _typing.py  cli.py  core.py  guesser.py  identifier.py  io.py  logging.py  main.py  models.py  settings.py  toputils.py  version.py
src/grodecoder/cli/: __init__.py  args.py
src/grodecoder/data/databases/: amino_acids.json  ions.json  mad_database.json  nucleotides.json  solvents.json  version.txt
src/grodecoder/databases/: __init__.py  api.py  csml.py  mad.py  models.py
src/grodecoder/databases/csml/: __init__.py  models.py  web_crawler.py
src/grodecoder/databases/mad/: models.py  web_crawler.py
tests/: __init__.py  test_guesser.py  test_identifier.py  test_models.py  test_regression.py
tests/data/: 1BRS_protein.gro  barstar.gro
tests/data/regression_data/expected_results/: 1BRS.json  1QJ8.json  1QJ8_ETH_ACN_MET_URE_SOL.json  1QJ8_membrane.json  1QJ8_solution.json  2MAT.json  4MQJ_ABCD.json  4ZRY.json  5MBA.json  5ZOA.json  (+6 more)
tests/test_toputils/: test_toputils.py  test_toputils_integration.py
