[project]
name = "grodecoder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "loguru>=0.7.3",
    "mdanalysis>=2.9.0",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.12.0",
    "streamlit>=1.50.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
grodecoder = "grodecoder.cli:cli"

[dependency-groups]
dev = [
    "icecream>=2.1.4",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
    "types-requests>=2.32.4.20250809",
    "beautifulsoup4>=4.13.3",
    "biopython>=1.85",
    "playwright>=1.51.0",
    "requests>=2.32.3",
    "streamlit>=1.44.0",
    "watchdog>=6.0.0",
    "ty==0.0.1a26",
]

[tool.ruff]
line-length = 110

[tool.pytest.ini_options]
addopts = "-ra"
